<resources>
    <string name="app_name">1D Smart Planner</string>
    <string name="input_email">Enter email</string>
    <string name="input_password">Enter password</string>
    <string name="button_login">Log In</string>
    <string name="title_activity_display_calendar">DisplayCalendar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Admin</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_group_meetings">Group Meetings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_tools">Extra</string>

    <string name="logout_qn">Are you sure you want to logout?</string>

    <string name="month_year">month Year</string>
    <string-array name="reminders">
        <item>None</item>
        <item>At time of event</item>
        <item>5 minutes before</item>
        <item>1 hour before</item>
        <item>1 day before</item>
        <item>2 days before</item>
    </string-array>
    <string-array name="difficulty">
        <item>Basic</item>
        <item>Intermediate</item>
        <item>Advanced</item>
    </string-array>


</resources>
