<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.onedee.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_todo_list"
        android:name="com.example.onedee.ui.todolist.TodoListFragment"
        android:label="Todo List"
        tools:layout="@layout/fragment_todo_list" />
    <fragment
        android:id="@+id/nav_group_meetings"
        android:name="com.example.onedee.ui.groupmeetings.GroupMeetingsFragment"
        android:label="@string/menu_group_meetings"
        tools:layout="@layout/fragment_group_meetings" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.onedee.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />

</navigation>